2025-02-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Apply rules only to file system entries and no longer to database
	  entries
	* Fix available hashsums in --version output when using
	  libgcrypt (closes: #187)
	* Fix display of unknown file type in detailed report section

2025-02-22 yixiangzhike <yixiangzhike007@163.com>
	* Remove deprecated hashsums from default config option database_attrs

2025-01-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix calculation of duration

2025-01-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor file processing code
	  - operate on file descriptor (opened once)
	  - significantly reduce "file has changed" warnings
	  - warn about file change after hash calculation
	  - disable attributes if not supported by file type
	  - improve error handling
	  - improve logging

2025-01-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing suffix to decimal constants

2025-01-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix entries per second calculation for logging
	* Limit Linux capabilities to regular files

2024-11-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor code to prepare for file system type restrictions
	* move failed JIT compilation log message to DEBUG level

2024-11-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove deprecated hashsums from H default group (closes: #179)

2024-10-14 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update aide.conf man page

2024-10-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor input database code
	  - use strtok_r instead of flex for tokenizing
	  - support integer and base64 representation for time_t
	* Refactor output database code
	  - save time_t as integer instead of base64 encoded string

2024-09-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix parsing of lowercase group names (closes: #176)

2024-07-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Switch from libmhash to libnettle (closes: #150, #164)